--- a/catalog.html
+++ b/catalog.html
@@ -25,13 +25,13 @@
           <ul class="user-navigation">
             <li class="account">
               <a class="username account-icon" href="profile.html">Валентин Петухов</a>
-              <a class="account-icon log-out" href="#">Выйти</a>
+              <a class="account-icon log-out" href="logout.html">Выйти</a>
             </li>
             <li class="compare">
-              <a class="compare-icon" href="#">Сравнить</a>
+              <a class="compare-icon" href="compare.html">Сравнить</a>
             </li>
             <li class="cart">
-              <a class="cart-icon" href="#">Корзина</a>
+              <a class="cart-icon" href="cart.html">Корзина</a>
             </li>
           </ul>
         </div>
@@ -288,13 +288,13 @@
           <ul class="user-navigation-footer">
             <li class="account account-logged">
               <a class="username account-icon-footer" href="#">Валентин Петухов</a>
-              <a class="log-out" href="#">Выйти</a>
+              <a class="log-out" href="logout.html">Выйти</a>
             </li>
             <li class="compare">
-              <a class="compare-icon-footer" href="#">Сравнить</a>
+              <a class="compare-icon-footer" href="compare.html">Сравнить</a>
             </li>
             <li class="cart">
-              <a class="cart-icon-footer" href="#">Корзина</a>
+              <a class="cart-icon-footer" href="cart.html">Корзина</a>
             </li>
           </ul>
           <p class="telephone">Тел.: +7 (495) 495-95-95</p>
