--- a/index.html
+++ b/index.html
@@ -25,17 +25,16 @@
             <label class="visually-hidden" for="search">Поиск по сайту</label>
             <input class="search-line" type="search" name="search" placeholder="Поиск по сайту" id="search">
             <input class="search-button" type="submit" name="search" value="Найти">
-            <div class="search-bar"></div>
           </form>
           <ul class="user-navigation">
             <li class="account">
-              <a class="account-icon log-in" href="#">Войти</a>
+              <a class="account-icon log-in" href="login.html">Войти</a>
             </li>
             <li class="compare">
-              <a class="compare-icon" href="#">Сравнить</a>
+              <a class="compare-icon" href="compare.html">Сравнить</a>
             </li>
             <li class="cart">
-              <a class="cart-icon" href="#">Корзина</a>
+              <a class="cart-icon" href="cart.html">Корзина</a>
             </li>
           </ul>
         </div>
@@ -294,13 +293,13 @@
               <div class="footer-right">
                 <ul class="user-navigation-footer">
                   <li class="account">
-                    <a class="account-icon-footer" href="#">Войти</a>
+                    <a class="account-icon-footer" href="login.html">Войти</a>
                   </li>
                   <li class="compare">
-                    <a class="compare-icon-footer" href="#">Сравнить</a>
+                    <a class="compare-icon-footer" href="compare.html">Сравнить</a>
                   </li>
                   <li class="cart">
-                    <a class="cart-icon-footer" href="#">Корзина</a>
+                    <a class="cart-icon-footer" href="cart.html">Корзина</a>
                   </li>
                 </ul>
                 <p class="telephone">Тел.: +7 (495) 495-95-95</p>
@@ -344,6 +343,6 @@
             <span class="visually-hidden">Закрыть всплывающее окно</span>
           </button>
         </section>
-        <script src="js/script.js"></script>
+        <script src="js/minified-script.js"></script>
       </body>
       </html>
